Preparação para sincronização de todos os arquivos

--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
     <header>
             <img class="logo" src="assets/img/logo.png" alt="Amontadas Boat">
             <div class="menuMobile"onclick="menuOnClick()" >
-                <div class="iconMenuBar" ><img id="iconBar" src="assets/img/menuMobileIcon.svg" alt=""></div>
+                <div class="iconMenuBar" >
+                    <img id="iconBar" src="assets/img/menuMobileIcon.svg" alt="">
+                </div>
             </div>
         <nav class="menu-bar">
             <ul>
-                <li><a  class="link-menu-bar" href="index.html">Quem Somos</a><img id='iconLocalPage' src="assets/img/iconLocalPage.png" alt=""></li>
+                <li><a  class="link-menu-bar" href="index.html">Quem Somos</a>
+                    <img id='iconLocalPage' src="assets/img/iconLocalPage.png" alt="">
+                </li>
                 <li><a class="link-menu-bar" href="assets/html/produtos.html">Produtos</a></li>
                 <li><a class="link-menu-bar" href="assets/html/equipe.html">Equipe</a></li>
                 <li><a class="link-menu-bar" href="assets/html/contato.html">Contato</a></li>
@@ -32,33 +36,35 @@
                     <img src="assets/img/left.svg" alt="">
                 </div>
                 
-                    <div class="content1">
-                        <img class="img-home" id="lancha" src="assets/img/lanchaHome.jpg" alt="Lancha">
-                        <p class="text-home">Já imaginou explorar o mar de Amontada e de praias vizinhas? Nós da Amontada’s boat somos uma empresa criada em 2017 especializada em aluguéis de barcos, veleiros, lanchas e jet-ski e dentre isso também oferecemos pacotes com passeios turísticos e outras atividades mais leves como o mergulho. Seja qual for a sua preferência, garantimos a sua diversão!</p>
-                    </div>
+                <div class="content1">
+                    <img class="img-home" id="lancha" src="assets/img/lanchaHome.jpg" alt="Lancha">
+                    <p class="text-home">Já imaginou explorar o mar de Amontada e de praias vizinhas? Nós da Amontada’s boat somos uma empresa criada em 2017 especializada em aluguéis de barcos, veleiros, lanchas e jet-ski e dentre isso também oferecemos pacotes com passeios turísticos e outras atividades mais leves como o mergulho. Seja qual for a sua preferência, garantimos a sua diversão!</p>
+                </div>
 
-                    <div class="content2">
-                        <img class="img-home" id="veleiro" src="assets/img/veleiroHome.jpg" alt="Veleiro">
-                        <p class="text-home">Dentre nossos serviços, oferecemos a possibilidade de alugar com ou sem capitão. Se não tem habilitação para navegar, não se preocupe, pois aqui você pode encontrar barcos com capitão, e assim, você pode deixar um profissional assumir o comando enquanto curte este momento único! Temos uma equipe de especialistas pronta para planejar e realizar com carinho sua experiência a bordo.</p>
-                    </div>
+                <div class="content2">
+                    <img class="img-home" id="veleiro" src="assets/img/veleiroHome.jpg" alt="Veleiro">
+                    <p class="text-home">Dentre nossos serviços, oferecemos a possibilidade de alugar com ou sem capitão. Se não tem habilitação para navegar, não se preocupe, pois aqui você pode encontrar barcos com capitão, e assim, você pode deixar um profissional assumir o comando enquanto curte este momento único! Temos uma equipe de especialistas pronta para planejar e realizar com carinho sua experiência a bordo.</p>
+                </div>
 
-                    <div class="content3">
-                        <img class="img-home" id="jetSki" src="assets/img/jetSkiHome.jpg" alt="Jet Ski">
-                        <p class="text-home">O aluguel dos nossos equipamentos pode ser por horas, o dia inteiro ou até mesmo vários dias, tudo depende da disponibilidade, e da sua agenda! Foco na satisfação de nossos clientes, tratamos com capricho cada detalhe da sua jornada conosco, seja no aluguel de veleiros ou passeios, entre em contato conosco pelo nosso email ou até mesmo Whatsapp e saiba mais.</p>
-                    </div>
+                <div class="content3">
+                    <img class="img-home" id="jetSki" src="assets/img/jetSkiHome.jpg" alt="Jet Ski">
+                    <p class="text-home">O aluguel dos nossos equipamentos pode ser por horas, o dia inteiro ou até mesmo vários dias, tudo depende da disponibilidade, e da sua agenda! Foco na satisfação de nossos clientes, tratamos com capricho cada detalhe da sua jornada conosco, seja no aluguel de veleiros ou passeios, entre em contato conosco pelo nosso email ou até mesmo Whatsapp e saiba mais.</p>
+                </div>
 
-                    <div class="buttonNavigation" id="rigth"  >
-                        <img src="assets/img/rigth.svg" alt="">
-                    </div>
-
-                </section>
+                <div class="buttonNavigation" id="rigth"  >
+                    <img src="assets/img/rigth.svg" alt="">
+                </div>
         
             </div>
     </main>
     <footer>
            <div class="img-footer">
-            <a href="https://www.instagram.com/" target="_blank"><img id="icon-insta" src="assets/img/Instagram.svg" alt="Instagram"></a>
-            <a href="https://www.whatsapp.com/" target="_blank"><img id="icon-whats" src="assets/img/whatsapp.svg" alt="Whatsapp"></a>
+                <a href="https://www.instagram.com/" target="_blank">
+                    <img id="icon-insta" src="assets/img/Instagram.svg" alt="Instagram">
+                </a>
+                <a href="https://www.whatsapp.com/" target="_blank">
+                    <img id="icon-whats" src="assets/img/whatsapp.svg" alt="Whatsapp">
+                </a>
            </div>
 
             <p id="byFor">Desenvolvido por 2023 TechDev’s</p>
