--- a/assets/html/Produtos.html
+++ b/assets/html/Produtos.html
@@ -13,10 +13,10 @@
             <img class="logo" src="../img/logo.png" alt="Amontadas Boat">
         <div class="menu-bar">
             <ul id="links">
-                <li><a class="link-menu-bar" href="">Quem Somos</a></li>
+                <li><a class="link-menu-bar" href="../../index.html">Quem Somos</a></li>
                 <li id='localPage'><a  class="link-menu-bar" href="">Produtos</a><img id='iconLocalPage' src="../img/iconLocalPage.png" alt=""></li>
-                <li><a class="link-menu-bar" href="">Equipe</a></li>
-                <li><a class="link-menu-bar" href="">Contato</a></li>
+                <li><a class="link-menu-bar" href="equipe.html">Equipe</a></li>
+                <li><a class="link-menu-bar" href="contato.html">Contato</a></li>
             </ul>
             <img onclick="exibeMenu()" id='iconMenuMobile' src="../img/menuMobileIcon.svg" alt="">
         </div>
@@ -81,8 +81,8 @@
     </main>
     <footer>
            <div class="img-footer">
-                <a><img id="icon-insta" src="../img/Instagram.svg" alt="Instagram"></a>
-                <a><img id="icon-whats" src="../img/whatsapp.svg" alt="Whatsapp"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img id="icon-insta" src="../img/Instagram.svg" alt="Instagram"></a>
+                <a href="https://www.whatsapp.com/" target="_blank"><img id="icon-whats" src="../img/whatsapp.svg" alt="Whatsapp"></a>
            </div>
 
             <p id="byFor">Desenvolvido por 2023 TechDev’s</p>
