--- a/assets/html/contato.html
+++ b/assets/html/contato.html
@@ -16,8 +16,8 @@
     <div class="menu-bar">
         <ul>
             <li><a class="link-menu-bar" href="../../index.html">Quem Somos</a></li>
-            <li id='localPage'><a class="link-menu-bar" href="">Produtos</a></li>
-            <li><a class="link-menu-bar" href="">Equipe</a></li>
+            <li id='localPage'><a class="link-menu-bar" href="Produtos.html">Produtos</a></li>
+            <li><a class="link-menu-bar" href="equipe.html">Equipe</a></li>
             <li><a class="link-menu-bar" href="">Contato</a><img id='iconLocalPage' src="../img/iconLocalPage.png" alt=""></li>
         </ul>
         <img id='iconMenuMobile' src="../img/menuMobileIcon.svg" alt="">
@@ -51,22 +51,19 @@
                         <textarea name="" id=""></textarea>
                     </div>	
 
-                    <button type="submit" value="" id="enviar" onclick="limpar()"><img class="img-btn-submit" src="../img/barquinho.png" alt=""></button>
+                    <button type="submit" value="" id="enviar" onclick="limpar()"><img id='barquinho' class="img-btn-submit" src="../img/barquinho.png" alt=""></button>
             </form>
         </div>
     </main>
     <footer>
-           <div class="img-footer">
-                <img id="icon-insta" src="../img/Instagram.svg" alt="Instagram">
-                <img id="icon-whats" src="../img/whatsapp.svg" alt="Whatsapp">
-           </div>
+        <div class="img-footer">
+             <a href="https://www.instagram.com/" target="_blank"><img id="icon-insta" src="../img/Instagram.svg" alt="Instagram"></a>
+             <a href="https://www.whatsapp.com/" target="_blank"><img id="icon-whats" src="../img/whatsapp.svg" alt="Whatsapp"></a>
+        </div>
 
-            <p id="byFor">Desenvolvido por 2023 TechDev’s</p>
-            <p>+55(11)2345-6789</p>
+         <p id="byFor">Desenvolvido por 2023 TechDev’s</p>
+         <p id="numberContact">+55(11)2345-6789</p>
     </footer>
-
-    
-
 </body>
 
 <script src="../js/contato.js"></script>
