--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -12,27 +8,19 @@
     <link rel="icon" type="image/x-icon" href="assets/img/logotitle.png">
     <link rel="stylesheet" href="assets/style/headerFooter.css">
     <link rel="stylesheet" href="assets/style/index.css">
->
 </head>
 <body>
-    <header>
-            <img class="logo" src="assets/img/logo.png" alt="Amontadas Boat">
-            <div class="menuMobile"onclick="menuOnClick()" >
-                <div class="iconMenuBar" >
-                    <img id="iconBar" src="assets/img/menuMobileIcon.svg" alt="">
-                </div>
-            </div>
-        <nav class="menu-bar">
-            <ul>
-                <li><a  class="link-menu-bar" href="index.html">Quem Somos</a>
-                    <img id='iconLocalPage' src="assets/img/iconLocalPage.png" alt="">
-                </li>
-                <li><a class="link-menu-bar" href="assets/html/produtos.html">Produtos</a></li>
+    <header id="header">
+        <img class="logo" src="assets/img/logo.png" alt="Amontadas Boat">
+        <div class="menu-bar">
+            <ul id="links">
+                <li id='localPage'><a  class="link-menu-bar" href="">Quem SomoS</a><img id='iconLocalPage' src="assets/img/iconLocalPage.png" alt=""></li>
+                <li><a class="link-menu-bar" href="assets/html/Produtos.html">Produtos</a></li>
                 <li><a class="link-menu-bar" href="assets/html/equipe.html">Equipe</a></li>
                 <li><a class="link-menu-bar" href="assets/html/contato.html">Contato</a></li>
             </ul>
-            
-        </nav>
+            <img onclick="exibeMenu()" id='iconMenuMobile' src="assets/img/menuMobileIcon.svg" alt="">
+        </div>
     </header>
     <main>
             <div class="content-home">
@@ -76,13 +64,6 @@
     </footer>
 
     <script src="assets/js/index.js"></script>
+    <script src="assets/js/header.js"></script>
 </body>
 </html>
-
-
-
-=======
->>>>>>> origin
-=======
->>>>>>> 04e719a340a562b2f4ff79127c43bf9881e4f8f4
->>>>>>> a453db1aa71f9b350ea4c19412049b1e7003902a
