Correções de bugs no menu responsivo

--- a/assets/html/Produtos.html
+++ b/assets/html/Produtos.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../style/Produto.css">
 </head>
 <body>
+    <!-- Cabeçalho -->
     <header id="header">
             <img class="logo" src="../img/logo.png" alt="Amontadas Boat">
         <div class="menu-bar">
@@ -21,7 +22,9 @@
             <img onclick="exibeMenu()" id='iconMenuMobile' src="../img/menuMobileIcon.svg" alt="">
         </div>
     </header>
-    <main id="main">
+
+    <!-- Conteudo Principal -->
+    <main>
         <section id="secBoats">
             <div id="left" class="buttonNavigation" onclick="botaoEsquerdo()"><img  src="../img/left.svg"></div>
             <div id='lancha' class="boat">
@@ -79,6 +82,8 @@
             </div>
         </section>
     </main>
+
+    <!-- Rodapé -->
     <footer>
            <div class="img-footer">
                 <a href="https://www.instagram.com/" target="_blank"><img id="icon-insta" src="../img/Instagram.svg" alt="Instagram"></a>
