--- a/assets/html/equipe.html
+++ b/assets/html/equipe.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <header id="header">
-        <img class="logo" src="../img/logo.png" alt="Amontadas Boat">
+        <img id='logo' class="logo" src="../img/logo.png" alt="Amontadas Boat">
         <div class="menu-bar">
             <ul id="links">
                 <li><a class="link-menu-bar" href="../../index.html">Quem Somos</a></li>
                 <li><a class="link-menu-bar" href="Produtos.html">Produtos</a></li>
-                <li id='localPage'><a  class="link-menu-bar" href="">Esquipe</a><img id='iconLocalPage' src="../img/iconLocalPage.png" alt=""></li>
+                <li id='localPage'><a  class="link-menu-bar" href="">Equipe</a><img id='iconLocalPage' src="../img/iconLocalPage.png" alt=""></li>
                 <li><a class="link-menu-bar" href="contato.html">Contato</a></li>
             </ul>
             <img onclick="exibeMenu()" id='iconMenuMobile' src="../img/menuMobileIcon.svg" alt="">
