--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amontada's Boat</title>
     <link rel="icon" type="image/x-icon" href="assets/img/logotitle.png">
-    <link rel="stylesheet" href="assets/style/headerFooter.css">
     <link rel="stylesheet" href="assets/style/index.css">
+    <link rel="stylesheet" href="assets/style/headerFooter.css">
 </head>
 <body>
+    <!-- Cabeçalho -->
     <header id="header">
         <img class="logo" src="assets/img/logo.png" alt="Amontadas Boat">
         <div class="menu-bar">
@@ -22,8 +23,9 @@
             <img onclick="exibeMenu()" id='iconMenuMobile' src="assets/img/menuMobileIcon.svg" alt="">
         </div>
     </header>
-    <main>
-            <div class="content-home">
+    <!-- Conteudo Principal -->
+    <main id='#main'>
+            <div  class="content-home">
                 <div class="buttonNavigation" id="left" onclick="botaoEsquerdo()" >
                     <img src="assets/img/left.svg" alt="">
                 </div>
@@ -49,6 +51,7 @@
         
             </div>
     </main>
+    <!-- Rodapé -->
     <footer>
            <div class="img-footer">
                 <a href="https://www.instagram.com/" target="_blank">
@@ -64,6 +67,5 @@
     </footer>
 
     <script src="assets/js/index.js"></script>
-    <script src="assets/js/header.js"></script>
 </body>
 </html>
